Update Report and main.py comments

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -10,7 +10,8 @@
     "2. [Starting Point](#2) <br>\n",
     "    2.1 [Constants](#2.1) <br>\n",
     "    2.2 [Fundamental Ship Parameters](#2.2) <br>\n",
-    "    2.3 [Derived Ship Parameters](#2.3) <br>\n",
+    "    2.3 [Voyage Ship Parameters](#2.3) <br>\n",
+    "    2.4 [Model Formulas](#2.4) <br>\n",
     "3. [Optimization](#3) <br>\n",
     "    3.1 [Initial Guess | x0](#3.1) <br>\n",
     "    3.2 [Constraints | constraints](#3.2) <br>\n",
@@ -75,11 +76,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = 9.801 # Gravitational acceleration at the earth's surface"
+    "g = 9.805  # Gravitational acceleration at the earth's surface\n",
+    "p = 1.025  # Sea water density"
    ]
   },
   {
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,24 +110,147 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 Derived Ship Parameters  <a name=\"2.3\"></a>\n",
-    "\n",
-    "It is important to note that all other parameters are derived from the constants and ship parameters defined above. So, ultimately seeking to calculate the transportation cost, many intermediate parameters are calculated. Nevertheless, some of these parameters are relevant to the application of constraints and are therefore must be defined globally here:"
+    "### 2.3 Voyage Parameters  <a name=\"2.3\"></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "KB = 0.53*T # Vertical Centre of Buoyancy\n",
-    "BMt = (0.085*Cb - 0.002)*(B ** 2)/(T+Cb) # Metacentric Radius\n",
-    "KG = 1 + 0.52*D # Vertical Centre of Gravity\n",
-    "GMt = KB + BMt - KG # Metacentric Height\n",
+    "round_trip_miles = 5000\n",
+    "handling_rate = 8000\n",
+    "fuel_price = 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4 Model Formulas  <a name=\"2.4\"></a>\n",
     "\n",
-    "V = 0.5144*Vk # TODO: is this the service speed?\n",
-    "froude_number = V / ((g*L) ** 0.5)"
+    "To avoid code repetition, we defined functions that calculate parameters to formulas defined by the computational model used:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_V(Vk):\n",
+    "    return 0.5144*Vk\n",
+    "\n",
+    "\n",
+    "def get_displacement(L, B, T, Cb):\n",
+    "    return p*L*B*T*Cb\n",
+    "\n",
+    "\n",
+    "def get_froude_number(Vk, L):\n",
+    "    V = get_V(Vk)\n",
+    "    return V / ((g*L) ** 0.5)\n",
+    "\n",
+    "\n",
+    "def get_power(Cb, displacement, V, froude_number):\n",
+    "    a = 4977.06*(Cb ** 2) - 8105.61*Cb + 4456.51\n",
+    "    b = -10847.2*(Cb ** 2) + 12817*Cb - 6960.32\n",
+    "    return (displacement ** (2/3))*(V ** 3) / (a + b*froude_number)\n",
+    "\n",
+    "\n",
+    "def get_steel_weight(L, B, D, Cb):\n",
+    "    return 0.034*(L**1.7)*(B**0.7)*(D**0.4)*(Cb**0.5)\n",
+    "\n",
+    "\n",
+    "def get_outfit_weight(L, B, D, Cb):\n",
+    "    return (L ** 0.8)*(B ** 0.6)*(D ** 0.3)*(Cb ** 0.1)\n",
+    "\n",
+    "\n",
+    "def get_machinery_weight(power): return 0.17*(power ** 0.9)\n",
+    "\n",
+    "\n",
+    "def get_lightship_weight(steel_weight, outfit_weight, machinery_weight):\n",
+    "    return steel_weight + outfit_weight + machinery_weight\n",
+    "\n",
+    "\n",
+    "def get_sea_days(round_trip_miles, Vk):\n",
+    "    return round_trip_miles/(24*Vk)\n",
+    "\n",
+    "\n",
+    "def get_daily_consumption(power):\n",
+    "    return 0.19*power*24/1000 + 0.2\n",
+    "\n",
+    "\n",
+    "def get_fuel_carried(daily_consumption, sea_days):\n",
+    "    return daily_consumption*(sea_days+5)\n",
+    "\n",
+    "\n",
+    "def get_miscellaneous_DWT(DWT):\n",
+    "    return 2*(DWT ** 0.5)\n",
+    "\n",
+    "\n",
+    "def get_cargo_DWT(DWT, fuel_carried, miscellaneous_DWT):\n",
+    "    return DWT-fuel_carried-miscellaneous_DWT\n",
+    "\n",
+    "\n",
+    "def get_port_days(cargo_DWT, handling_rate):\n",
+    "    return 2*((cargo_DWT/handling_rate)+0.5)\n",
+    "\n",
+    "\n",
+    "def get_round_trips_per_year(sea_days, port_days):\n",
+    "    return 350/(sea_days+port_days)\n",
+    "\n",
+    "\n",
+    "def get_port_cost(DWT):\n",
+    "    return 6.3*(DWT ** 0.8)\n",
+    "\n",
+    "\n",
+    "def get_fuel_cost(daily_consumption, sea_days, fuel_price):\n",
+    "    return 1.05*daily_consumption*sea_days*fuel_price\n",
+    "\n",
+    "\n",
+    "def get_voyage_costs(fuel_cost, port_cost, round_trips_per_year):\n",
+    "    return (fuel_cost+port_cost)*round_trips_per_year\n",
+    "\n",
+    "\n",
+    "def get_running_cost(DWT):\n",
+    "    return 40000*(DWT ** 0.3)\n",
+    "\n",
+    "\n",
+    "def get_ship_cost(steel_weight, outfit_weight, power):\n",
+    "    return 1.3*(2000*steel_weight + 3500 *\n",
+    "                outfit_weight + 2400*(power ** 0.8))\n",
+    "\n",
+    "\n",
+    "def get_capital_costs(ship_cost): return 0.2*ship_cost\n",
+    "\n",
+    "\n",
+    "def get_annual_cost(capital_costs, running_cost, voyage_costs):\n",
+    "    return capital_costs + running_cost + voyage_costs\n",
+    "\n",
+    "\n",
+    "def get_annual_cargo(cargo_DWT, round_trips_per_year):\n",
+    "    return cargo_DWT*round_trips_per_year\n",
+    "\n",
+    "\n",
+    "def get_transportation_cost(annual_cost, annual_cargo):\n",
+    "    return annual_cost/annual_cargo\n",
+    "\n",
+    "\n",
+    "def get_KB(T):  # Vertical Centre of Buoyancy\n",
+    "    return 0.53*T\n",
+    "\n",
+    "\n",
+    "def get_BMt(Cb, B, T):  # Metacentric Radius\n",
+    "    return (0.085*Cb - 0.002)*(B ** 2)/(T+Cb)\n",
+    "\n",
+    "\n",
+    "def get_KG(D):  # Vertical Centre of Gravity\n",
+    "    return 1 + 0.52*D\n",
+    "\n",
+    "\n",
+    "def get_GMt(KB, BMt, KG):  # Metacentric Height\n",
+    "    return KB + BMt - KG"
    ]
   },
   {
@@ -164,16 +289,16 @@
    "source": [
     "### 3.3 Initial Guess | x0  <a name=\"3.3\"></a>\n",
     "\n",
-    "The order in which we place each parameter is arbitrary for program implementation. For organizational purposes, however, we put fundamental ship parameters at the beginning and then derived parameters at the end, so the initial guess vector is:"
+    "The order in which we place each parameter is arbitrary for program implementation. For organizational purposes, however, we put more fundamental ship parameters at the beginning."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x0 = [L, B, D, T, Cb, Vk, DWT, GMt, froude_number]"
+    "x0 = [L, B, D, T, Cb, Vk, DWT]"
    ]
   },
   {
@@ -194,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,13 +335,13 @@
     "        and containing the keys \"type\" and \"fun\".\n",
     "\n",
     "        \"type\" : {\"eq\", \"ineq\"}\n",
-    "            Determines if it is an equality or inequality constraint \n",
+    "            Determines if it is an equality or inequality constraint\n",
     "\n",
     "        \"fun\" : callable\n",
     "            The function defining the constraint. It receives a vector x with\n",
     "            all parameters (in the order as defined by the initial guess, x0).\n",
     "            Equality constraint means that the constraint function result is to\n",
-    "            be zero (fun(x) == 0) whereas inequality means that it is to be \n",
+    "            be zero (fun(x) == 0) whereas inequality means that it is to be\n",
     "            non-negative (f(x) >= 0).\n",
     "\n",
     "    See Also\n",
@@ -225,7 +350,7 @@
     "\n",
     "    Notes\n",
     "    -----\n",
-    "    Constraints typically don't need a builder function like this and are \n",
+    "    Constraints typically don't need a builder function like this and are\n",
     "    more succinctly defined with \"func\" being a lambda function. The decision to\n",
     "    create the build_constraints function was to try to make it easier to understand\n",
     "    how constraints are defined in Scipy and to clarify where each constraint of the\n",
@@ -257,10 +382,19 @@
     "        D, T = x[2], x[3]\n",
     "        return 0.7*D + 0.7 - T\n",
     "\n",
-    "    def stability_condition(x):\n",
+    "    def stability_constraint(x):\n",
     "        '''GMt >= 0.07B'''\n",
-    "        B, GMt = x[1], x[7]\n",
+    "        B, D, T, Cb = x[1], x[2], x[3], x[4]\n",
+    "        KB = get_KB(T)\n",
+    "        BMt = get_BMt(Cb, B, T)\n",
+    "        KG = get_KG(D)\n",
+    "        GMt = get_GMt(KB, BMt, KG)\n",
     "        return GMt - 0.07*B\n",
+    "\n",
+    "    def froude_number_constraint(x):\n",
+    "        L, Vk = x[0], x[5]\n",
+    "        froude_number = get_froude_number(Vk, L)\n",
+    "        return 0.32 - froude_number\n",
     "\n",
     "    return (\n",
     "        {'type': 'ineq', 'fun': L_and_B},\n",
@@ -268,7 +402,8 @@
     "        {'type': 'ineq', 'fun': L_and_T},\n",
     "        {'type': 'ineq', 'fun': T_and_DWT},\n",
     "        {'type': 'ineq', 'fun': T_and_D},\n",
-    "        {'type': 'ineq', 'fun': stability_condition},\n",
+    "        {'type': 'ineq', 'fun': stability_constraint},\n",
+    "        {'type': 'ineq', 'fun': froude_number_constraint},\n",
     "    )"
    ]
   },
@@ -283,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,11 +447,8 @@
     "    Cb_bound = (0.63, 0.75)\n",
     "    Vk_bound = (14, 18)\n",
     "    DWT_bound = (25000, 500000)\n",
-    "    GMt_bound = (None, None)\n",
-    "    froude_number_bound = (0, 0.32)\n",
-    "    return (L_bound, B_bound, D_bound,\n",
-    "            T_bound, Cb_bound, Vk_bound,\n",
-    "            DWT_bound, GMt_bound, froude_number_bound)"
+    "    return (L_bound, B_bound, D_bound, T_bound,\n",
+    "            Cb_bound, Vk_bound, DWT_bound)"
    ]
   },
   {
@@ -330,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,50 +481,44 @@
     "    out : float\n",
     "        The value of the transportation cost calculated from given parameters\n",
     "    '''\n",
-    "    L, B, D, T, Cb, Vk, DWT, GMt, froude_number = x\n",
+    "    L, B, D, T, Cb, Vk, DWT = x\n",
     "\n",
     "    # Power\n",
-    "    V = 0.5144*Vk\n",
-    "    displacement = 1.025*L*B*T*Cb\n",
-    "    a = 4977.06*(Cb ** 2) - 8105.61*Cb + 4456.51\n",
-    "    b = -10847.2*(Cb ** 2) + 12817*Cb - 6960.32\n",
-    "    power = (displacement ** (2/3))*(V ** 3) / (a + b*froude_number)\n",
+    "    displacement = get_displacement(L, B, T, Cb)\n",
+    "    V, froude_number = get_V(Vk), get_froude_number(Vk, L)\n",
+    "    power = get_power(Cb, displacement, V, froude_number)\n",
     "\n",
     "    # Weights\n",
-    "    steel_weight = 0.034*(L**1.7)*(B**0.7)*(D**0.4)*(Cb**0.5)\n",
-    "    outfit_weight = (L ** 0.8)*(B ** 0.6)*(D ** 0.3)*(Cb ** 0.1)\n",
+    "    steel_weight = get_steel_weight(L, B, D, Cb)\n",
+    "    outfit_weight = get_outfit_weight(L, B, D, Cb)\n",
     "\n",
     "    # We commented the lines containing the variables below because, although\n",
     "    # they were mentioned in problem assignment, they are not used in our program.\n",
-    "    # machinery_weight = 0.17*(power ** 0.9)\n",
-    "    # ligthship_weight = steel_weight + outfit_weight + machinery_weight\n",
+    "    # machinery_weight = get_machinery_weight(power)\n",
+    "    # ligthship_weight = get_lightship_weight(\n",
+    "    #     steel_weight, outfit_weight, machinery_weight)\n",
     "\n",
     "    # General (TODO: give a better name for this category of calculations)\n",
-    "    round_trip_miles = 5000\n",
-    "    sea_days = round_trip_miles/(24*Vk)\n",
-    "    daily_consumption = 0.19*power*24/1000 + 0.2\n",
-    "    fuel_carried = daily_consumption*(sea_days+5)\n",
-    "    miscellaneous_DWT = 2*(DWT ** 0.5)\n",
-    "    cargo_DWT = DWT-fuel_carried-miscellaneous_DWT\n",
-    "    handling_rate = 8000\n",
-    "    port_days = 2*((cargo_DWT/handling_rate)+0.5)\n",
-    "    round_trips_per_year = 350/(sea_days+port_days)\n",
+    "    sea_days = get_sea_days(round_trip_miles, Vk)\n",
+    "    daily_consumption = get_daily_consumption(power)\n",
+    "    fuel_carried = get_fuel_carried(daily_consumption, sea_days)\n",
+    "    miscellaneous_DWT = get_miscellaneous_DWT(DWT)\n",
+    "    cargo_DWT = get_cargo_DWT(DWT, fuel_carried, miscellaneous_DWT)\n",
+    "\n",
+    "    port_days = get_port_days(cargo_DWT, handling_rate)\n",
+    "    round_trips_per_year = get_round_trips_per_year(sea_days, port_days)\n",
     "\n",
     "    # Costs\n",
-    "    port_cost = 6.3*(DWT ** 0.8)\n",
-    "    fuel_price = 100\n",
-    "    fuel_cost = 1.05*daily_consumption*sea_days*fuel_price\n",
-    "    voyage_costs = (fuel_cost+port_cost)*round_trips_per_year\n",
-    "    running_cost = 40000*(DWT ** 0.3)\n",
-    "    ship_cost = 1.3*(2000*steel_weight + 3500 *\n",
-    "                     outfit_weight + 2400*(power ** 0.8))\n",
-    "    capital_costs = 0.2*ship_cost\n",
+    "    port_cost = get_port_cost(DWT)\n",
+    "    fuel_cost = get_fuel_cost(daily_consumption, sea_days, fuel_price)\n",
+    "    voyage_costs = get_voyage_costs(fuel_cost, port_cost, round_trips_per_year)\n",
+    "    running_cost = get_running_cost(DWT)\n",
+    "    ship_cost = get_ship_cost(steel_weight, outfit_weight, power)\n",
+    "    capital_costs = get_capital_costs(ship_cost)\n",
+    "    annual_cost = get_annual_cost(capital_costs, running_cost, voyage_costs)\n",
+    "    annual_cargo = get_annual_cargo(cargo_DWT, round_trips_per_year)\n",
     "\n",
-    "    annual_cost = capital_costs + running_cost + voyage_costs\n",
-    "    annual_cargo = cargo_DWT*round_trips_per_year\n",
-    "\n",
-    "    transportation_cost = annual_cost/annual_cargo\n",
-    "    return transportation_cost"
+    "    return get_transportation_cost(annual_cost, annual_cargo)\n"
    ]
   },
   {
@@ -406,38 +532,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "     fun: 1.997323626655561\n",
-       "     jac: array([ 0.00000000e+00,  9.83130640e+01,  0.00000000e+00,  0.00000000e+00,\n",
-       "        0.00000000e+00, -2.35243738e-02, -1.80304050e-06,  0.00000000e+00,\n",
-       "        0.00000000e+00])\n",
-       " message: 'Optimization terminated successfully'\n",
-       "    nfev: 90\n",
-       "     nit: 10\n",
-       "    njev: 9\n",
-       "  status: 0\n",
-       " success: True\n",
-       "       x: array([5.43743348e+01, 5.27355937e-14, 9.03830163e+00, 4.83417188e+00,\n",
-       "       6.30000000e-01, 1.80000000e+01, 1.00000000e+05, 2.31030732e+00,\n",
-       "       0.00000000e+00])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scipy.optimize import minimize\n",
     "\n",
-    "minimize(\n",
+    "result = minimize(\n",
     "    x0=x0, # Initial guess vector\n",
-    "    fun=transportation_cost_function, # Function to be optimized\n",
+    "    fun=transportation_cost_function, # Objective function to be optimized\n",
     "    method='SLSQP', # We are using the Sequential Least Squares Programming algorithm\n",
     "    constraints=build_constraints(), # Sequence of dictionaries defining the constraints\n",
     "    bounds=build_bounds() # Sequence of tuples defining lower and upper bounds for each parameter\n",
@@ -448,7 +551,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The result (that is, the minimum transportation cost value obtained, is the \"fun\" value displayed when executing the above ballot."
+    "We then get the optimized transportation cost and the corresponding ship parameters as the result of the optimization:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimized transportation cost: 3.2402818838874525 \n",
+      "\n",
+      "Length (L) after optimization: 98.83192803980378\n",
+      "Breadth (B) after optimization: 16.47198800663392\n",
+      "Depth (D) after optimization: 6.588795202653554\n",
+      "Draught (T) after optimization: 5.3121566418576736\n",
+      "Block Coefficient (Cb) after optimization: 0.7499999999999816\n",
+      "Speed (Vk) after optimization: 15.756864143830995\n",
+      "Deadweigth (DWT) after optimization: 100000.00350009301\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the Optimized transportation cost and the changed\n",
+    "# ship parameters as result of the optimization\n",
+    "optimized_transportation_cost = result.fun\n",
+    "L, B, D, T, Cb, Vk, DWT = result.x\n",
+    "\n",
+    "# And finnally print the obtained values\n",
+    "print(f\"Optimized transportation cost: {optimized_transportation_cost} \\n\")\n",
+    "print(f\"Length (L) after optimization: {L}\")\n",
+    "print(f\"Breadth (B) after optimization: {B}\")\n",
+    "print(f\"Depth (D) after optimization: {D}\")\n",
+    "print(f\"Draught (T) after optimization: {T}\")\n",
+    "print(f\"Block Coefficient (Cb) after optimization: {Cb}\")\n",
+    "print(f\"Speed (Vk) after optimization: {Vk}\")\n",
+    "print(f\"Deadweigth (DWT) after optimization: {DWT}\")"
    ]
   }
  ],
