--- a/Report.ipynb
+++ b/Report.ipynb
@@ -392,6 +392,7 @@
     "        return GMt - 0.07*B\n",
     "\n",
     "    def froude_number_constraint(x):\n",
+    "        '''froude_number <= 0.32'''\n",
     "        L, Vk = x[0], x[5]\n",
     "        froude_number = get_froude_number(Vk, L)\n",
     "        return 0.32 - froude_number\n",
