Update Notebook and add TODO in formulas.py

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,17 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "L = 55 # Length\n",
-    "B = 5 # Breadth\n",
-    "D = 10 # Depth\n",
-    "T = 5 # Draught\n",
-    "Cb = 0.7 # Block Coefficient\n",
-    "Vk = 14 # TODO - what is Vk?\n",
-    "DWT = 100000 # Deadweight"
+    "L = 55  # Length\n",
+    "B = 5  # Breadth\n",
+    "D = 10  # Depth\n",
+    "T = 5  # Draught\n",
+    "Cb = 0.7  # Block Coefficient\n",
+    "Vk = 14  # Speed in knots"
    ]
   },
   {
@@ -115,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,10 +134,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: Put all functions with the fundamental ship parameters as only arguments\n",
+    "\n",
+    "def get_DWT(L, B, T, D, Cb, Vk):\n",
+    "    displacement = get_displacement(L, B, T, Cb)\n",
+    "    V, froude_number = get_V(Vk), get_froude_number(Vk, L)\n",
+    "    power = get_power(Cb, displacement, V, froude_number)\n",
+    "    lightship_weight = get_lightship_weight(\n",
+    "        get_steel_weight(L, B, D, Cb),\n",
+    "        get_outfit_weight(L, B, D, Cb),\n",
+    "        get_machinery_weight(power)\n",
+    "    )\n",
+    "    return displacement - lightship_weight\n",
+    "\n",
+    "\n",
     "def get_V(Vk):\n",
     "    return 0.5144*Vk\n",
     "\n",
@@ -250,7 +263,7 @@
     "\n",
     "\n",
     "def get_GMt(KB, BMt, KG):  # Metacentric Height\n",
-    "    return KB + BMt - KG"
+    "    return KB + BMt - KG\n"
    ]
   },
   {
@@ -294,11 +307,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x0 = [L, B, D, T, Cb, Vk, DWT]"
+    "x0 = [L, B, D, T, Cb, Vk]"
    ]
   },
   {
@@ -319,13 +332,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_constraints():\n",
     "    '''A function that builds constraints relating two or more parameters\n",
-    "    defined for the optimization problem.\n",
+    "    or bounds that need to be calculated from the set of parameters (x0 or x)\n",
     "\n",
     "\n",
     "    Returns\n",
@@ -356,31 +369,43 @@
     "    how constraints are defined in Scipy and to clarify where each constraint of the\n",
     "    problem was defined.\n",
     "    '''\n",
+    "    def DWT_lower_bound(x):\n",
+    "        ''' DWT >= 500000'''\n",
+    "        L, B, D, T, Cb, Vk = x[0], x[1], x[2], x[3], x[4], x[5]\n",
+    "        DWT = get_DWT(L, B, D, T, Cb, Vk)\n",
+    "        return DWT - 25000  # >= 0\n",
+    "\n",
+    "    def DWT_upper_bound(x):\n",
+    "        ''' DWT <= 500000'''\n",
+    "        L, B, D, T, Cb, Vk = x[0], x[1], x[2], x[3], x[4], x[5]\n",
+    "        DWT = get_DWT(L, B, D, T, Cb, Vk)\n",
+    "        return 500000 - DWT  # >= 0\n",
     "\n",
     "    def L_and_B(x):\n",
     "        '''L/B >= 6'''\n",
     "        L, B = x[0], x[1]\n",
-    "        return L/B - 6\n",
+    "        return L/B - 6  # >= 0\n",
     "\n",
     "    def L_and_D(x):\n",
     "        '''L/D  <= 15'''\n",
     "        L, D = x[0], x[2]\n",
-    "        return 15 - L/D\n",
+    "        return 15 - L/D  # >= 0\n",
     "\n",
     "    def L_and_T(x):\n",
     "        '''L/T <= 19'''\n",
     "        L, T = x[0], x[3]\n",
-    "        return 19 - L/T\n",
+    "        return 19 - L/T  # >= 0\n",
     "\n",
     "    def T_and_DWT(x):\n",
     "        '''T <= 0.45DWT^0,31'''\n",
-    "        T, DWT = x[3], x[6]\n",
-    "        return 0.45*DWT*(DWT**0.32) - T\n",
+    "        L, B, D, T, Cb, Vk = x[0], x[1], x[2], x[3], x[4], x[5]\n",
+    "        DWT = get_DWT(L, B, T, D, Cb, Vk)\n",
+    "        return 0.45*(DWT**0.32) - T  # >= 0\n",
     "\n",
     "    def T_and_D(x):\n",
     "        '''T <= 0.7D + 0.7'''\n",
     "        D, T = x[2], x[3]\n",
-    "        return 0.7*D + 0.7 - T\n",
+    "        return 0.7*D + 0.7 - T  # >= 0\n",
     "\n",
     "    def stability_constraint(x):\n",
     "        '''GMt >= 0.07B'''\n",
@@ -389,15 +414,17 @@
     "        BMt = get_BMt(Cb, B, T)\n",
     "        KG = get_KG(D)\n",
     "        GMt = get_GMt(KB, BMt, KG)\n",
-    "        return GMt - 0.07*B\n",
+    "        return GMt - 0.07*B  # >= 0\n",
     "\n",
     "    def froude_number_constraint(x):\n",
     "        '''froude_number <= 0.32'''\n",
     "        L, Vk = x[0], x[5]\n",
     "        froude_number = get_froude_number(Vk, L)\n",
-    "        return 0.32 - froude_number\n",
+    "        return 0.32 - froude_number  # >= 0\n",
     "\n",
     "    return (\n",
+    "        {'type': 'ineq', 'fun': DWT_lower_bound},\n",
+    "        {'type': 'ineq', 'fun': DWT_upper_bound},\n",
     "        {'type': 'ineq', 'fun': L_and_B},\n",
     "        {'type': 'ineq', 'fun': L_and_D},\n",
     "        {'type': 'ineq', 'fun': L_and_T},\n",
@@ -419,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,9 +474,14 @@
     "    T_bound = (0, None)\n",
     "    Cb_bound = (0.63, 0.75)\n",
     "    Vk_bound = (14, 18)\n",
-    "    DWT_bound = (25000, 500000)\n",
-    "    return (L_bound, B_bound, D_bound, T_bound,\n",
-    "            Cb_bound, Vk_bound, DWT_bound)"
+    "    return (\n",
+    "        L_bound,\n",
+    "        B_bound,\n",
+    "        D_bound,\n",
+    "        T_bound,\n",
+    "        Cb_bound,\n",
+    "        Vk_bound,\n",
+    "    )"
    ]
   },
   {
@@ -463,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +514,7 @@
     "    out : float\n",
     "        The value of the transportation cost calculated from given parameters\n",
     "    '''\n",
-    "    L, B, D, T, Cb, Vk, DWT = x\n",
+    "    L, B, D, T, Cb, Vk = x\n",
     "\n",
     "    # Power\n",
     "    displacement = get_displacement(L, B, T, Cb)\n",
@@ -493,13 +525,8 @@
     "    steel_weight = get_steel_weight(L, B, D, Cb)\n",
     "    outfit_weight = get_outfit_weight(L, B, D, Cb)\n",
     "\n",
-    "    # We commented the lines containing the variables below because, although\n",
-    "    # they were mentioned in problem assignment, they are not used in our program.\n",
-    "    # machinery_weight = get_machinery_weight(power)\n",
-    "    # ligthship_weight = get_lightship_weight(\n",
-    "    #     steel_weight, outfit_weight, machinery_weight)\n",
-    "\n",
     "    # General (TODO: give a better name for this category of calculations)\n",
+    "    DWT = get_DWT(L, B, T, D, Cb, Vk)\n",
     "    sea_days = get_sea_days(round_trip_miles, Vk)\n",
     "    daily_consumption = get_daily_consumption(power)\n",
     "    fuel_carried = get_fuel_carried(daily_consumption, sea_days)\n",
@@ -533,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,17 +607,17 @@
     "# Get the Optimized transportation cost and the changed\n",
     "# ship parameters as result of the optimization\n",
     "optimized_transportation_cost = result.fun\n",
-    "L, B, D, T, Cb, Vk, DWT = result.x\n",
+    "L, B, D, T, Cb, Vk = result.x\n",
     "\n",
     "# And finnally print the obtained values\n",
-    "print(f\"Optimized transportation cost: {optimized_transportation_cost} \\n\")\n",
-    "print(f\"Length (L) after optimization: {L}\")\n",
-    "print(f\"Breadth (B) after optimization: {B}\")\n",
-    "print(f\"Depth (D) after optimization: {D}\")\n",
-    "print(f\"Draught (T) after optimization: {T}\")\n",
+    "print(\n",
+    "    f\"Optimized transportation cost: {optimized_transportation_cost} [US$/ton] \\n\")\n",
+    "print(f\"Length (L) after optimization: {L} [m]\")\n",
+    "print(f\"Breadth (B) after optimization: {B} [m]\")\n",
+    "print(f\"Depth (D) after optimization: {D} [m]\")\n",
+    "print(f\"Draught (T) after optimization: {T} [m]\")\n",
     "print(f\"Block Coefficient (Cb) after optimization: {Cb}\")\n",
-    "print(f\"Speed (Vk) after optimization: {Vk}\")\n",
-    "print(f\"Deadweigth (DWT) after optimization: {DWT}\")"
+    "print(f\"Speed in knots (Vk) after optimization: {Vk} [kn]\")"
    ]
   }
  ],
