Update Notebook with new results

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -584,22 +584,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimized transportation cost: 3.2402818838874525 \n",
+      "Optimized transportation cost: 10.440118737289001 [US$/ton] \n",
       "\n",
-      "Length (L) after optimization: 98.83192803980378\n",
-      "Breadth (B) after optimization: 16.47198800663392\n",
-      "Depth (D) after optimization: 6.588795202653554\n",
-      "Draught (T) after optimization: 5.3121566418576736\n",
-      "Block Coefficient (Cb) after optimization: 0.7499999999999816\n",
-      "Speed (Vk) after optimization: 15.756864143830995\n",
-      "Deadweigth (DWT) after optimization: 100000.00350009301\n"
+      "Length (L) after optimization: 169.41303076597728 [m]\n",
+      "Breadth (B) after optimization: 28.23550513390894 [m]\n",
+      "Depth (D) after optimization: 13.273331961812636 [m]\n",
+      "Draught (T) after optimization: 9.991332374100319 [m]\n",
+      "Block Coefficient (Cb) after optimization: 0.75\n",
+      "Speed in knots (Vk) after optimization: 17.999999997412296 [kn]\n"
      ]
     }
    ],
@@ -610,8 +609,7 @@
     "L, B, D, T, Cb, Vk = result.x\n",
     "\n",
     "# And finnally print the obtained values\n",
-    "print(\n",
-    "    f\"Optimized transportation cost: {optimized_transportation_cost} [US$/ton] \\n\")\n",
+    "print(f\"Optimized transportation cost: {optimized_transportation_cost} [US$/ton] \\n\")\n",
     "print(f\"Length (L) after optimization: {L} [m]\")\n",
     "print(f\"Breadth (B) after optimization: {B} [m]\")\n",
     "print(f\"Depth (D) after optimization: {D} [m]\")\n",
